--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,22 +10,58 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
+  workflow_dispatch:
 
+env:
+  mavenGoal: "clean install"
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    env:
+      buildScript: "pom.xml"
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: "mvn -B ${mavenGoal} --file ${buildScript}"
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    - uses: actions/upload-artifact@v3
+      with:
+       name: buildArtifact
+       path: target/*.war      
+      
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/download-artifact@v3
+       with:
+         name: buildArtifact
+     - name: Production Deployment
+       run: |
+          ls -lart 
+     - name: scp ssh pipelines
+       uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+       env:
+         LASTSSH: "Doing something after copying"
+       with:
+         host: ${{ secrets.DC_HOST }}
+         user: ${{ secrets.DC_USER }}
+         key: ${{ secrets.DC_KEY }}
+         scp: |
+          ./*.war => /tmp/
+         last_ssh: |
+            sudo cp /tmp/*.war /var/lib/tomcat9/webapps/ 
+            ls -la
